# perlin-core

./: Cargo.toml
notes/: all_notes.org
src/: lib.rs
src/compressor/: naive_compressor.rs
src/index/: debug_impl.rs  listing.rs  mod.rs  posting.rs  vocabulary.rs
src/page_manager/: block_iter.rs  fs_page_manager.rs  mod.rs  page.rs  ram_page_cache.rs
src/test_utils/: mod.rs
src/utils/: counter.rs  mod.rs  progress.rs  ring_buffer.rs  seeking_iterator.rs
