[package]
name = "perlin-core"
version = "0.2.0"
authors = ["Jakob Demler <jdemler@curry-software.com>"]
description = "A lazy, zero-allocation and data-agnostic Information Retrieval library"
documentation = "https://doc.perlin-ir.org"
homepage = "https://www.perlin-ir.org"
repository = "https://github.com/JDemler/perlin-core"
readme = "README.md"
keywords = ["information", "retrieval"]
license = "MIT"
